--- a/people.html
+++ b/people.html
@@ -225,12 +225,12 @@
       </div>
    </div>
    <hr>
-   <div class="row-fluid">
+   <div class="row-fluid" style="padding-top: 20px;">
       <div class="span3">
-         <img src="thumbs/Photo_Jiayu.jpg" alt="Jiayu Liang"/>
+         <img src="thumbs/Photo_Jiayu.jpg" alt="Jiayu Liang" style="margin-top: 0;"/>
       </div>
-      <div class="span9 offset">
-         <h4 style="text-align: left;">Jiayu LIANG 梁家瑜 (BA: Shandong U)</h4>
+      <div class="span9 offset style="margin-top: 0;">
+         <h4 style="text-align: left; margin-top: 0;">Jiayu LIANG 梁家瑜 (BA: Shandong U)</h4>
          <p><i>Research Assistant</i></p>
          <p>Jiayu holds a BA in English from Shandong University. Her research interests focus on the production and perception of non-native languages, as well as the cross-domain transfer effects between music and language experience. For her undergraduate thesis, Jiayu employed eye-tracking methodology to investigate how Mandarin speakers' musical aptitude influences their perception and production of English vowels. Currently, she is involved in an eye-tracking study examining L2 learners' perceptual learning and consolidation of English lexical stress.</p>
          <p><b>Email:</b> <a href="mailto:hmjyliang@ust.hk">hmjyliang@ust.hk</a></p>
