--- a/people.html
+++ b/people.html
@@ -204,14 +204,13 @@
 </div> <!-- container 结束 -->
 
 
-<hr>  
 <section id="staff">
-   <div class="row-fluid">
+   <div class="row-fluid" style="padding-top: 20px;">
       <div class="span3">
          <img src="thumbs/Photo_Susu.jpg" alt="Susu Lai"/>
       </div>
-      <div class="span9 offset">
-         <h4 style="text-align: left;">Susu LAI 賴素素 (BA: Hunan U; MA: HKU)</h4>
+      <div class="span9 offset style="margin-top: 0;">
+         <h4 style="text-align: left; margin-top: 0;">Susu LAI 賴素素 (BA: Hunan U; MA: HKU)</h4>
          <p><i>Lab Manager & Research Assistant</i></p>
          <p>Susu graduated from the University of Hong Kong with an MA degree in Linguistics. She has a strong interest in psycholinguistics, specifically understanding how individuals acquire and process the prosodic features of a second language. In her previous research project, she explored implicit learning of lexical stress in second language acquisition. She is currently involved in an EEG study on L2 learners' consolidation of Cantonese tones during daytime naps.</p>
          <p><b>Email:</b> <a href="mailto:hmsusu@ust.hk">hmsusu@ust.hk</a></p>
