--- a/people.html
+++ b/people.html
@@ -186,12 +186,12 @@
    <div class="row-fluid">
       <div class="span10">
          <section id="principalinvestigator">
-            <div class="row-fluid">
+            <div class="row-fluid" style="padding-top: 20px;>
                <div class="span3 post">
-                  <img src="thumbs/Photo_Quentin.jpeg" alt="Quentin Zhen QIN"/>
+                  <img src="thumbs/Photo_Quentin.jpeg" alt="Quentin Zhen QIN" style="margin-top: 0;/>
                </div>
-               <div class="span9 offset">
-                  <h4 style="text-align: left;">Quentin Zhen QIN 秦震 Ph.D.</h4>
+               <div class="span9 offset style="margin-top: 0;">
+                  <h4 style="text-align: left; margin-top: 0;">Quentin Zhen QIN 秦震 Ph.D.</h4>
                   <p>Quentin is an Assistant Professor of Linguistics in the Division of Humanities at the Hong Kong University of Science and Technology. He is also Associate Director of ​Center for Chinese Linguistics and a faculty associate of Center for Aging Science, HKUST. He got his Ph.D degree in Linguistics from the Department of Linguistics, University of Kansas. Prior to joining the faculty at HKUST, he worked as Postdoctoral Researcher at the Research Center for Language, Cognition, and Neuroscience, Hong Kong Polytechnic University.</p>
                   <p><b>Email:</b> <a href="mailto:hmzqin@ust.hk">hmzqin@ust.hk</a></p>
                   <p><b><a href="https://sites.google.com/site/qinzhenquentin/">Personal Website</a>, <a href="https://orcid.org/0000-0002-6117-7809">ORCID ID</a>, <a href="files/C.V._Zhen Qin_Research.pdf">CV</a></b></p>
@@ -207,7 +207,7 @@
 <section id="staff">
    <div class="row-fluid" style="padding-top: 20px;">
       <div class="span3">
-         <img src="thumbs/Photo_Susu.jpg" alt="Susu Lai"/>
+         <img src="thumbs/Photo_Susu.jpg" alt="Susu Lai" style="margin-top: 0;/>
       </div>
       <div class="span9 offset style="margin-top: 0;">
          <h4 style="text-align: left; margin-top: 0;">Susu LAI 賴素素 (BA: Hunan U; MA: HKU)</h4>
