--- a/people.html
+++ b/people.html
@@ -186,8 +186,8 @@
    <div class="row-fluid">
       <div class="span10">
          <section id="principalinvestigator">
-            <div class="row-fluid" style="padding-top: 20px;>
-               <div class="span3 post">
+            <div class="row-fluid" style="padding-top: 40px;>
+               <div class="span3">
                   <img src="thumbs/Photo_Quentin.jpeg" alt="Quentin Zhen QIN" style="margin-top: 0;/>
                </div>
                <div class="span9 offset style="margin-top: 0;">
@@ -205,7 +205,7 @@
 
 
 <section id="staff">
-   <div class="row-fluid" style="padding-top: 20px;">
+   <div class="row-fluid" style="padding-top: 40px;">
       <div class="span3">
          <img src="thumbs/Photo_Susu.jpg" alt="Susu Lai" style="margin-top: 0;/>
       </div>
@@ -217,7 +217,7 @@
          <p><b><a href="https://www.researchgate.net/profile/Susu-Lai">ResearchGate</a>, <a href="files/CV_Susu LAI.pdf">CV</a></b></p>
       </div>
    </div>
-   <div class="row-fluid" style="padding-top: 20px;">
+   <div class="row-fluid" style="padding-top: 40px;">
       <div class="span3">
          <img src="thumbs/Photo_Jiayu.jpg" alt="Jiayu Liang" style="margin-top: 0;"/>
       </div>
