--- a/people.html
+++ b/people.html
@@ -186,7 +186,7 @@
    <div class="row-fluid">
       <div class="span10">
          <section id="principalinvestigator">
-            <div class="row-fluid" style="padding-top: 40px;>
+            <div class="row-fluid" style="padding-top: 40px;">
                <div class="span3">
                   <img src="thumbs/Photo_Quentin.jpeg" alt="Quentin Zhen QIN" style="margin-top: 0;"/>
                </div>
