--- a/people.html
+++ b/people.html
@@ -186,7 +186,7 @@
    <div class="row-fluid">
       <div class="span10">
          <section id="principalinvestigator">
-            <div class="row-fluid" style="padding-top: 40px;">
+            <div class="row-fluid" style="padding-top: 60px;">
                <div class="span3">
                   <img src="thumbs/Photo_Quentin.jpeg" alt="Quentin Zhen QIN" style="margin-top: 0;"/>
                </div>
@@ -205,7 +205,7 @@
 
 
 <section id="staff">
-   <div class="row-fluid" style="padding-top: 40px;">
+   <div class="row-fluid" style="padding-top: 60px;">
       <div class="span3">
          <img src="thumbs/Photo_Susu.jpg" alt="Susu Lai" style="margin-top: 0;"/>
       </div>
@@ -217,7 +217,7 @@
          <p><b><a href="https://www.researchgate.net/profile/Susu-Lai">ResearchGate</a>, <a href="files/CV_Susu LAI.pdf">CV</a></b></p>
       </div>
    </div>
-   <div class="row-fluid" style="padding-top: 40px;">
+   <div class="row-fluid" style="padding-top: 60px;">
       <div class="span3">
          <img src="thumbs/Photo_Jiayu.jpg" alt="Jiayu Liang" style="margin-top: 0;"/>
       </div>
@@ -233,12 +233,12 @@
 </section>
 
 <section id="student">
-   <div class="row-fluid">
+   <div class="row-fluid" style="padding-top: 60px;">
       <div class="span3">
-         <img src="thumbs/Photo_Jeremy.jpg" alt="Jeremy, Yin To CHUI"/>
+         <img src="thumbs/Photo_Jeremy.jpg" alt="Jeremy, Yin To CHUI" style="margin-top: 0;"/>
       </div>
-      <div class="span9 offset">
-         <h4 style="text-align: left;">Jeremy, Yin To CHUI 徐彥韜 (BA: CUHK; MA: PolyU; MPhil: UST)</h4>
+      <div class="span9 offset" style="margin-top: 0;">
+         <h4 style="text-align: left; margin-top: 0;" >Jeremy, Yin To CHUI 徐彥韜 (BA: CUHK; MA: PolyU; MPhil: UST)</h4>
          <p><i>Ph.D Student (HKPFS awardee)</i></p>
          <p>Jeremy graduated with an MA degree in Teaching Chinese as a Foreign Language from HK PolyU. He is interested in speech perception as well as the cognitive and computational mechanisms behind perceptual learning. Currently, he is working on whether, and to what extent, younger and older adults make statistical inferences (e.g., distributional information, word-referent co-occurrences) in the implicit perceptual learning L2 lexical tone categories. His previous MPhil project studied the statistical learning of Mandarin lexical tones and how individual differences played a role in learning. Jeremy's Ph.D study is funded by the Hong Kong PhD Fellowship.</p>
          <p><b>Email:</b> <a href="mailto:​ytchuiac@connect.ust.hk">​ytchuiac@connect.ust.hk</a></p>
@@ -246,12 +246,12 @@
       </div>
    </div>
    <hr>
-   <div class="row-fluid">
+   <div class="row-fluid" style="padding-top: 60px;">
       <div class="span3">
-         <img src="thumbs/Photo_Yuqi.jpg" alt="Yuqi Wang"/>
+         <img src="thumbs/Photo_Yuqi.jpg" alt="Yuqi Wang" style="margin-top: 0;"/>
       </div>
-      <div class="span9 offset">
-         <h4 style="text-align: left;">Yuqi WANG 王宇琪 (BA: Tianjin U; MPhil: UST)</h4>
+      <div class="span9 offset" style="margin-top: 0;">
+         <h4 style="text-align: left; margin-top: 0;">Yuqi WANG 王宇琪 (BA: Tianjin U; MPhil: UST)</h4>
          <p><i>Ph.D Student (HKPFS awardee)</i></p>
          <p>Yuqi graduated from Tianjin University with a BA Degree in English and from HKUST with an MPhil Degree in Humanities. She is interested in aging and the bilingual effect on cognition. She is now working on how language and other experiences (e.g., learning and using more than one language, music training, etc.) benefit one's cognitive abilities (e.g., attention and memory). Her MPhil thesis studied how individual bilingual experiences of younger Cantonese-English speakers influence the attentional control ability in a Forced-attention Dichotic Listening Task of Cantonese tones. Yuqi's Ph.D study is funded by the Hong Kong PhD Fellowship.</p>
          <p><b>Email:</b> <a href="mailto:ywangqi@connect.ust.hk">ywangqi@connect.ust.hk</a></p>
@@ -259,12 +259,12 @@
       </div>
    </div>
    <hr>
-   <div class="row-fluid">
+   <div class="row-fluid" style="padding-top: 60px;">
       <div class="span3">
-         <img src="thumbs/Photo_Kangdi.jpg" alt="Kangdi Liu"/>
+         <img src="thumbs/Photo_Kangdi.jpg" alt="Kangdi Liu" style="margin-top: 0;"/>
       </div>
-      <div class="span9 offset">
-         <h4 style="text-align: left;">Kangdi LIU 劉康迪 (BA: NENU; MA: Nankai)</h4>
+      <div class="span9 offset" style="margin-top: 0;">
+         <h4 style="text-align: left;margin-top: 0;">Kangdi LIU 劉康迪 (BA: NENU; MA: Nankai)</h4>
          <p><i>MPhil Student</i></p>
          <p>Kangdi graduated from Nankai University with a master's degree in Linguistics and Applied Linguistics. She is interested in phonetics and psycholinguistics, especially focusing on Chinese tones. Her past project studied tone variation and change in the Chinese dialects/languages. At present, she is working on the beneficial effect of prior knowledge on older adults’ memory consolidation in nonnative tone learning.</p>
          <p><b>Email:</b> <a href="mailto:​kliubc@connect.ust.hk">​kliubc@connect.ust.hk</a></p>
@@ -278,22 +278,22 @@
    <div class="page-header">
       <h3>Past Members and Alumni</h3>
    </div>
-   <div class="row-fluid">
+   <div class="row-fluid" style="padding-top: 40px;">
       <div class="span3">
-         <img src="thumbs/Photo_Cindy.png" style="width:80%; height:80%;" alt="Cindy, Rui JIN"/>
+         <img src="thumbs/Photo_Cindy.png" style="width:80%; height:80%;" alt="Cindy, Rui JIN" style="margin-top: 0;"/>
       </div>
-      <div class="span9 offset">
-         <h4 style="text-align: left;">Cindy, Rui JIN 金蕊 (Senior Research Assistant, 2021-2022)</h4>
+      <div class="span9 offset" style="margin-top: 0;">
+         <h4 style="text-align: left;margin-top: 0;">Cindy, Rui JIN 金蕊 (Senior Research Assistant, 2021-2022)</h4>
          <p>Cindy is currently a Ph.D student in Psychology at the University of Florida.</p>
       </div>
    </div>
    <hr>
-   <div class="row-fluid">
+   <div class="row-fluid" style="padding-top: 40px;">
       <div class="span3">
-         <img src="thumbs/Photo_Ruofan_edited.jpg" style="width:80%; height:80%;" alt="Ruofan Wu"/>
+         <img src="thumbs/Photo_Ruofan_edited.jpg" style="width:80%; height:80%;" alt="Ruofan Wu" style="margin-top: 0;"/>
       </div>
-      <div class="span9 offset">
-         <h4 style="text-align: left;">Ruofan WU 吳若繁 (Research Assistant, 2022-2023)</h4>
+      <div class="span9 offset" style="margin-top: 0;">
+         <h4 style="text-align: left;margin-top: 0;">Ruofan WU 吳若繁 (Research Assistant, 2022-2023)</h4>
          <p>Ruofan is currently a Ph.D student at the Hong Kong Polytechnic University.</p>
       </div>
    </div>
