--- a/people.html
+++ b/people.html
@@ -229,7 +229,6 @@
          <p><b><a href="https://lexie-liang.github.io/LiangJiayu.github.io/">Personal Website</a>, <a href="https://www.researchgate.net/profile/Jiayu-Liang-14">ResearchGate</a>, <a href="files/CV_Jiayu LIANG.pdf">CV</a></b></p>
       </div>
    </div>
-   <hr>
 </section>
 
 <section id="student">
@@ -245,7 +244,6 @@
          <p><b><a href="https://www.researchgate.net/profile/Yin-To-Chui">ResearchGate</a>, <a href="https://orcid.org/0000-0002-2169-086X">ORCID ID</a>, <a href="files/CV_Jeremy.pdf">CV</a></b></p>
       </div>
    </div>
-   <hr>
    <div class="row-fluid" style="padding-top: 60px;">
       <div class="span3">
          <img src="thumbs/Photo_Yuqi.jpg" alt="Yuqi Wang" style="margin-top: 0;"/>
@@ -258,7 +256,6 @@
          <p><b><a href="https://www.researchgate.net/profile/Yuqi-Wang-98">ResearchGate</a>, <a href="https://orcid.org/0009-0000-1794-9747​">ORCID ID</a>, <a href="files/CV_Yuqi.pdf">CV</a></b></p>
       </div>
    </div>
-   <hr>
    <div class="row-fluid" style="padding-top: 60px;">
       <div class="span3">
          <img src="thumbs/Photo_Kangdi.jpg" alt="Kangdi Liu" style="margin-top: 0;"/>
@@ -271,11 +268,10 @@
          <p><b><a href="https://www.researchgate.net/profile/Kangdi-Liu">ResearchGate</a>, <a href="https://orcid.org/0009-0008-1548-4040​">ORCID ID</a>, <a href="files/CV_Kangdi_new.pdf">CV</a></b></p>
       </div>
    </div>
-   <hr>
 </section>
 
 <section id="alumni">
-   <div class="page-header">
+   <div class="page-header" style="text-align:center">
       <h3>Past Members and Alumni</h3>
    </div>
    <div class="row-fluid" style="padding-top: 40px;">
@@ -287,7 +283,6 @@
          <p>Cindy is currently a Ph.D student in Psychology at the University of Florida.</p>
       </div>
    </div>
-   <hr>
    <div class="row-fluid" style="padding-top: 40px;">
       <div class="span3">
          <img src="thumbs/Photo_Ruofan_edited.jpg" style="width:80%; height:80%;" alt="Ruofan Wu" style="margin-top: 0;"/>
@@ -297,7 +292,6 @@
          <p>Ruofan is currently a Ph.D student at the Hong Kong Polytechnic University.</p>
       </div>
    </div>
-   <hr>
    <div class="row-fluid">
       <div class="span3">
          <!-- Placeholder for consistency -->
