--- a/people.html
+++ b/people.html
@@ -191,10 +191,12 @@
                   <img src="thumbs/Photo_Quentin.jpeg" alt="Quentin Zhen QIN" style="margin-top: 0;"/>
                </div>
                <div class="span9 offset style="margin-top: 0;">
-                  <h4 style="text-align: left; margin-top: 0;">Quentin Zhen QIN 秦震 Ph.D.</h4>
+                  <h4 style="font-size: 20px; text-align: left; margin-top: 0;">Quentin Zhen QIN 秦震 Ph.D.</h4>
+		  <p style="font-size: 20px; margin-bottom: 5px;"><b>Principal Investigator</b></p>
+                  <p style="font-size: 20px; margin-top: 5px; margin-bottom: 5px;">hmzqin@ust.hk; <a href="files/C.V._Zhen Qin_Research.pdf">CV</a></p>
+                  <p style="font-size: 20px; margin-top: 5px; margin-bottom: 5px;"><a href="https://sites.google.com/site/qinzhenquentin/">Personal Website</a></p>
+		  <p style="font-size: 20px; margin-top: 5px;">ORCID ID: <a href="https://orcid.org/0000-0002-6117-7809">https://orcid.org/0000-0002-6117-7809</a></p>
                   <p>Quentin is an Assistant Professor of Linguistics in the Division of Humanities at the Hong Kong University of Science and Technology. He is also Associate Director of ​Center for Chinese Linguistics and a faculty associate of Center for Aging Science, HKUST. He got his Ph.D degree in Linguistics from the Department of Linguistics, University of Kansas. Prior to joining the faculty at HKUST, he worked as Postdoctoral Researcher at the Research Center for Language, Cognition, and Neuroscience, Hong Kong Polytechnic University.</p>
-                  <p><b>Email:</b> <a href="mailto:hmzqin@ust.hk">hmzqin@ust.hk</a></p>
-                  <p><b><a href="https://sites.google.com/site/qinzhenquentin/">Personal Website</a>, <a href="https://orcid.org/0000-0002-6117-7809">ORCID ID</a>, <a href="files/C.V._Zhen Qin_Research.pdf">CV</a></b></p>
                </div>
             </div>
          </section>
