--- a/people.html
+++ b/people.html
@@ -310,8 +310,8 @@
 </section>
 
 <section id="Opportunity">
-   <div class="page-header" style="text-align: center;">
-      <h3>Opportunity</h3> <!-- Center the header -->
+   <div class="row-fluid" style="text-align: center;">
+      <h4 style="font-size: 28px; margin-top: 10px; margin-bottom: 10px;">Opportunity</h4> <!-- Center the header -->
    </div>
    <div class="row-fluid" style="display: flex; justify-content: center;">
       <div class="span9 offset1" style="text-align: left; width: auto; margin: 0 auto;"> <!-- Left-align content with max-width and centered container -->
