--- a/people.html
+++ b/people.html
@@ -274,8 +274,8 @@
 
 <hr>
 <section id="alumni">
-   <div class="page-header" style="text-align:center">
-      <h3>Past Members and Alumni</h3>
+   <div class="row-fluid" style="text-align: center;">
+      <h4>Past Members and Alumni</h4>
    </div>
    <div class="row-fluid" style="padding-top: 40px;">
       <div class="span3">
