--- a/people.html
+++ b/people.html
@@ -213,10 +213,9 @@
       </div>
       <div class="span9 offset style="margin-top: 0;">
          <h4 style="text-align: left; margin-top: 0;">Susu LAI 賴素素 (BA: Hunan U; MA: HKU)</h4>
-         <p><i>Lab Manager & Research Assistant</i></p>
+	 <p style="font-size: 20px; margin-bottom: 5px;"><b>Lab Manager & Research Assistant</b></p>
+	 <p style="font-size: 20px; margin-top: 5px; margin-bottom: 5px;">hmsusu@ust.hk; <a href="https://www.researchgate.net/profile/Susu-Lai">ResearchGate</a>, <a href="files/CV_Susu LAI.pdf">CV</a></p>
          <p>Susu graduated from the University of Hong Kong with an MA degree in Linguistics. She has a strong interest in psycholinguistics, specifically understanding how individuals acquire and process the prosodic features of a second language. In her previous research project, she explored implicit learning of lexical stress in second language acquisition. She is currently involved in an EEG study on L2 learners' consolidation of Cantonese tones during daytime naps.</p>
-         <p><b>Email:</b> <a href="mailto:hmsusu@ust.hk">hmsusu@ust.hk</a></p>
-         <p><b><a href="https://www.researchgate.net/profile/Susu-Lai">ResearchGate</a>, <a href="files/CV_Susu LAI.pdf">CV</a></b></p>
       </div>
    </div>
    <div class="row-fluid" style="padding-top: 60px;">
@@ -225,6 +224,10 @@
       </div>
       <div class="span9 offset style="margin-top: 0;">
          <h4 style="text-align: left; margin-top: 0;">Jiayu LIANG 梁家瑜 (BA: Shandong U)</h4>
+	 <p style="font-size: 20px; margin-bottom: 5px;"><b>Research Assistant</b></p>
+	 <p style="font-size: 20px; margin-top: 5px; margin-bottom: 5px;">hmsusu@ust.hk; <a href="https://www.researchgate.net/profile/Susu-Lai">ResearchGate</a>, <a href="files/CV_Susu LAI.pdf">CV</a></p>
+         <p style="font-size: 20px; margin-top: 5px; margin-bottom: 5px;"><a href="https://sites.google.com/site/qinzhenquentin/">Personal Website</a></p>
+	 <p style="font-size: 20px; margin-top: 5px;">ORCID ID: <a href="https://orcid.org/0000-0002-6117-7809">https://orcid.org/0000-0002-6117-7809</a></p>
          <p><i>Research Assistant</i></p>
          <p>Jiayu holds a BA in English from Shandong University. Her research interests focus on the production and perception of non-native languages, as well as the cross-domain transfer effects between music and language experience. For her undergraduate thesis, Jiayu employed eye-tracking methodology to investigate how Mandarin speakers' musical aptitude influences their perception and production of English vowels. Currently, she is involved in an eye-tracking study examining L2 learners' perceptual learning and consolidation of English lexical stress.</p>
          <p><b>Email:</b> <a href="mailto:hmjyliang@ust.hk">hmjyliang@ust.hk</a></p>
