--- a/people.html
+++ b/people.html
@@ -226,7 +226,7 @@
          <h4 style="text-align: left; margin-top: 0;">Jiayu LIANG 梁家瑜 (BA: Shandong U)</h4>
 	 <p style="font-size: 20px; margin-bottom: 5px;"><b>Research Assistant</b></p>
 	 <p style="font-size: 20px; margin-top: 5px; margin-bottom: 5px;">hmjyliang@ust.hk; <a href="https://www.researchgate.net/profile/Jiayu-Liang-14">ResearchGate</a>, <a href="files/CV_Jiayu LIANG.pdf">CV</a></p>
-         <p style="font-size: 20px; margin-top: 5px; margin-bottom: 5px;"><a href="https://lexie-liang.github.io/LiangJiayu.github.io/">Personal Website</a></p>
+         <p style="font-size: 20px; margin-top: 5px; "><a href="https://lexie-liang.github.io/LiangJiayu.github.io/">Personal Website</a></p>
          <p>Jiayu holds a BA in English from Shandong University. Her research interests focus on the production and perception of non-native languages, as well as the cross-domain transfer effects between music and language experience. For her undergraduate thesis, Jiayu employed eye-tracking methodology to investigate how Mandarin speakers' musical aptitude influences their perception and production of English vowels. Currently, she is involved in an eye-tracking study examining L2 learners' perceptual learning and consolidation of English lexical stress.</p>
       </div>
    </div>
@@ -239,10 +239,10 @@
       </div>
       <div class="span9 offset" style="margin-top: 0;">
          <h4 style="text-align: left; margin-top: 0;" >Jeremy, Yin To CHUI 徐彥韜 (BA: CUHK; MA: PolyU; MPhil: UST)</h4>
-         <p><i>Ph.D Student (HKPFS awardee)</i></p>
+	 <p style="font-size: 20px; margin-bottom: 5px;"><b>Ph.D Student (HKPFS awardee)</b></p>
+	 <p style="font-size: 20px; margin-top: 5px; margin-bottom: 5px;">ytchuiac@connect.ust.hk; <a href="https://www.researchgate.net/profile/Yin-To-Chui">ResearchGate</a>, <a href="files/CV_Jeremy.pdf">CV</a></p>
+	 <p style="font-size: 20px; margin-top: 5px;">ORCID ID: <a href="https://orcid.org/0000-0002-2169-086X">https://orcid.org/0000-0002-2169-086X</a></p>
          <p>Jeremy graduated with an MA degree in Teaching Chinese as a Foreign Language from HK PolyU. He is interested in speech perception as well as the cognitive and computational mechanisms behind perceptual learning. Currently, he is working on whether, and to what extent, younger and older adults make statistical inferences (e.g., distributional information, word-referent co-occurrences) in the implicit perceptual learning L2 lexical tone categories. His previous MPhil project studied the statistical learning of Mandarin lexical tones and how individual differences played a role in learning. Jeremy's Ph.D study is funded by the Hong Kong PhD Fellowship.</p>
-         <p><b>Email:</b> <a href="mailto:​ytchuiac@connect.ust.hk">​ytchuiac@connect.ust.hk</a></p>
-         <p><b><a href="https://www.researchgate.net/profile/Yin-To-Chui">ResearchGate</a>, <a href="https://orcid.org/0000-0002-2169-086X">ORCID ID</a>, <a href="files/CV_Jeremy.pdf">CV</a></b></p>
       </div>
    </div>
    <div class="row-fluid" style="padding-top: 60px;">
