--- a/people.html
+++ b/people.html
@@ -251,10 +251,10 @@
       </div>
       <div class="span9 offset" style="margin-top: 0;">
          <h4 style="text-align: left; margin-top: 0;">Yuqi WANG 王宇琪 (BA: Tianjin U; MPhil: UST)</h4>
-         <p><i>Ph.D Student (HKPFS awardee)</i></p>
+	 <p style="font-size: 20px; margin-bottom: 5px;"><b>Ph.D Student (HKPFS awardee)</b></p>
+	 <p style="font-size: 20px; margin-top: 5px; margin-bottom: 5px;">ywangqi@connect.ust.hk; <a href="https://www.researchgate.net/profile/Yuqi-Wang-98">ResearchGate</a>, <a href="files/CV_Yuqi.pdf">CV</a></p>
+	 <p style="font-size: 20px; margin-top: 5px;">ORCID ID: <a href="https://orcid.org/0009-0000-1794-9747​">https://orcid.org/0009-0000-1794-9747​</a></p>
          <p>Yuqi graduated from Tianjin University with a BA Degree in English and from HKUST with an MPhil Degree in Humanities. She is interested in aging and the bilingual effect on cognition. She is now working on how language and other experiences (e.g., learning and using more than one language, music training, etc.) benefit one's cognitive abilities (e.g., attention and memory). Her MPhil thesis studied how individual bilingual experiences of younger Cantonese-English speakers influence the attentional control ability in a Forced-attention Dichotic Listening Task of Cantonese tones. Yuqi's Ph.D study is funded by the Hong Kong PhD Fellowship.</p>
-         <p><b>Email:</b> <a href="mailto:ywangqi@connect.ust.hk">ywangqi@connect.ust.hk</a></p>
-         <p><b><a href="https://www.researchgate.net/profile/Yuqi-Wang-98">ResearchGate</a>, <a href="https://orcid.org/0009-0000-1794-9747​">ORCID ID</a>, <a href="files/CV_Yuqi.pdf">CV</a></b></p>
       </div>
    </div>
    <div class="row-fluid" style="padding-top: 60px;">
