--- a/people.html
+++ b/people.html
@@ -263,10 +263,10 @@
       </div>
       <div class="span9 offset" style="margin-top: 0;">
          <h4 style="text-align: left;margin-top: 0;">Kangdi LIU 劉康迪 (BA: NENU; MA: Nankai)</h4>
-         <p><i>MPhil Student</i></p>
+	 <p style="font-size: 20px; margin-bottom: 5px;"><b>MPhil Student</b></p>
+	 <p style="font-size: 20px; margin-top: 5px; margin-bottom: 5px;">kliubc@connect.ust.hk; <a href="https://www.researchgate.net/profile/Kangdi-Liu">ResearchGate</a>, <a href="files/CV_Kangdi_new.pdf">CV</a></p>
+	 <p style="font-size: 20px; margin-top: 5px;">ORCID ID: <a href="https://orcid.org/0009-0008-1548-4040​">https://orcid.org/0009-0008-1548-4040​</a></p>
          <p>Kangdi graduated from Nankai University with a master's degree in Linguistics and Applied Linguistics. She is interested in phonetics and psycholinguistics, especially focusing on Chinese tones. Her past project studied tone variation and change in the Chinese dialects/languages. At present, she is working on the beneficial effect of prior knowledge on older adults’ memory consolidation in nonnative tone learning.</p>
-         <p><b>Email:</b> <a href="mailto:​kliubc@connect.ust.hk">​kliubc@connect.ust.hk</a></p>
-         <p><b><a href="https://www.researchgate.net/profile/Kangdi-Liu">ResearchGate</a>, <a href="https://orcid.org/0009-0008-1548-4040​">ORCID ID</a>, <a href="files/CV_Kangdi_new.pdf">CV</a></b></p>
       </div>
    </div>
 </section>
