--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
                     <div style="flex: 1;">
                         <img src="files/welcometoslab.png" class="small-img" alt="Slab Letter">
                         <div class="text">
-                           <p><b>We are based in the <a href="https://huma.hkust.edu.hk/" target="_blank">Division of Humanities</a> at Hong Kong University of Science and Technology.
-                            <b><p>
+                           <p>We are based in the <a href="https://huma.hkust.edu.hk/" target="_blank">Division of Humanities</a> at Hong Kong University of Science and Technology.
+                            <p>
                         </div>
                     </div>
                     <div style="flex: 2;">
