--- a/media.html
+++ b/media.html
@@ -115,35 +115,35 @@
 		   <h3>Collaborators</h3>
 		   <p><em>On Second-language learning of speech prosody</em></p>
 			  <ol> 
-			    <li>Dr. Sang-Im Lee-Kim, Hanyang University, Korea [<a href="https://sites.google.com/site/sangimleekim/">Link</a>]</li>
-			    <li>Prof. Annie Tremblay, University of Texas at El Paso, U.S. [<a href="https://www.annietremblay.com/">Link</a>]</li>
-			    <li>Dr. Jingwei Zhang, University of Macau [<a href="https://fah.um.edu.mo/jingwei-zhang/">Link</a>]</li>
+			    <li>Dr. Sang-Im Lee-Kim, Hanyang University, Korea [<a href="https://sites.google.com/site/sangimleekim/" target="_blank">Link</a>]</li>
+			    <li>Prof. Annie Tremblay, University of Texas at El Paso, U.S. [<a href="https://www.annietremblay.com/" target="_blank">Link</a>]</li>
+			    <li>Dr. Jingwei Zhang, University of Macau [<a href="https://fah.um.edu.mo/jingwei-zhang/" target="_blank">Link</a>]</li>
 			  </ol>
 		   <p><em>On Sleep-dependent consolidation of lexical tones</em></p>
 			  <ol> 
-			    <li>Dr. Xiaoqing Hu, University of Hong Kong [<a href="https://psychology.hku.hk/people/hu-xiaoqing/">Link</a>]</li>
-			    <li>Dr. Caicai Zhang, Hong Kong Polytechnic University [<a href="https://research.polyu.edu.hk/en/persons/caicai-zhang">Link</a>]</li>
+			    <li>Dr. Xiaoqing Hu, University of Hong Kong [<a href="https://psychology.hku.hk/people/hu-xiaoqing/" target="_blank">Link</a>]</li>
+			    <li>Dr. Caicai Zhang, Hong Kong Polytechnic University [<a href="https://research.polyu.edu.hk/en/persons/caicai-zhang" target="_blank">Link</a>]</li>
 			  </ol>
 		   <p><em>On Aging, cognitive, and language learning</em></p>
 			  <ol> 
-			    <li>Prof. William Wang, Hong Kong Polytechnic University [<a href="https://research.polyu.edu.hk/en/persons/william-shi-yuan-wang">Link</a>]</li>
-			    <li>Prof. Xiaohu Yang, Tongji University [<a href="https://ageing.tongji.edu.cn/info/1014/1333.html">Link</a>]</li>
+			    <li>Prof. William Wang, Hong Kong Polytechnic University [<a href="https://research.polyu.edu.hk/en/persons/william-shi-yuan-wang" target="_blank">Link</a>]</li>
+			    <li>Prof. Xiaohu Yang, Tongji University [<a href="https://ageing.tongji.edu.cn/info/1014/1333.html" target="_blank">Link</a>]</li>
 			  </ol>
 		   <h3>Collaborative labs & centers</h3>
 		   <p><em>Internal</em></p>
 			  <ol> 
-			    <li>SHSS Eyetracking Laboratory (Rm 3302) [<a href="https://www.sr-research.com/eyelink-portable-duo/">Link</a>]</li>
-			    <li>Center for Chinese Linguistics (Rm 2388) [<a href="https://ccl.hkust.edu.hk/">Link</a>]</li>
-			    <li>Center for Aging Science [<a href="https://aging.hkust.edu.hk/">Link</a>]</li>
-			    <li>Counseling and Wellness Center [<a href="https://counsel.hkust.edu.hk/">Link</a>]</li>
-			    <li>Institute for Emerging Market Studies [<a href="https://iems.ust.hk/home">Link</a>]</li>
+			    <li>SHSS Eyetracking Laboratory (Rm 3302) [<a href="https://www.sr-research.com/eyelink-portable-duo/" target="_blank">Link</a>]</li>
+			    <li>Center for Chinese Linguistics (Rm 2388) [<a href="https://ccl.hkust.edu.hk/" target="_blank">Link</a>]</li>
+			    <li>Center for Aging Science [<a href="https://aging.hkust.edu.hk/" target="_blank">Link</a>]</li>
+			    <li>Counseling and Wellness Center [<a href="https://counsel.hkust.edu.hk/" target="_blank">Link</a>]</li>
+			    <li>Institute for Emerging Market Studies [<a href="https://iems.ust.hk/home" target="_blank">Link</a>]</li>
 			  </ol>
 		   <p><em>External</em></p>
 			  <ol> 
-			    <li>Research Center for Aging, Language and Care, Tongji University [<a href="https://ageing.tongji.edu.cn/index.html">Link</a>]</li>
-			    <li>Research Center for Language, Cognition, and Neuroscience, PolyU [<a href="https://www.polyu.edu.hk/cbs/rclcn/">Link</a>]</li>
-			    <li>Social & Cognitive Neuroscience Laboratory, HKU [<a href="https://www.psychology.hku.hk/scnlab/home.html">Link</a>]</li>
-			    <li>Neurocognition of Language, Music and Learning Lab, PolyU [<a href="https://drcczlab.github.io/index.html">Link</a>]</li>
+			    <li>Research Center for Aging, Language and Care, Tongji University [<a href="https://ageing.tongji.edu.cn/index.html" target="_blank">Link</a>]</li>
+			    <li>Research Center for Language, Cognition, and Neuroscience, PolyU [<a href="https://www.polyu.edu.hk/cbs/rclcn/" target="_blank">Link</a>]</li>
+			    <li>Social & Cognitive Neuroscience Laboratory, HKU [<a href="https://www.psychology.hku.hk/scnlab/home.html" target="_blank">Link</a>]</li>
+			    <li>Neurocognition of Language, Music and Learning Lab, PolyU [<a href="https://drcczlab.github.io/index.html" target="_blank">Link</a>]</li>
 			  </ol>
 
 		 <hr>
@@ -160,7 +160,7 @@
    		   <img src="files/Media 1.jpg" alt="media_nap.jpg" />
   		  </div>
    		 <div class="span9">
-   		   <p><a href="https://dw-media.tkww.hk/epaper/wwp/20240319/a07-0319.pdf">[Mar 2024] 中午食飽睡一睡 醒神活腦記性增</a> <a href="https://www.wenweipo.com/a/202403/18/AP65f84357e4b0ad017f0e444a.html">[Video Link]</a></p>
+   		   <p><a href="https://dw-media.tkww.hk/epaper/wwp/20240319/a07-0319.pdf">[Mar 2024] 中午食飽睡一睡 醒神活腦記性增</a> <a href="https://www.wenweipo.com/a/202403/18/AP65f84357e4b0ad017f0e444a.html" target="_blank">[Video Link]</a></p>
     		  <i>Hong Kong Wen Wei Po.</i>
     		 </div>
  		 </div>
@@ -171,7 +171,7 @@
    	 	  <img src="files/Media 2.png" alt="media_talk.png" />
   	 	 </div>
    		  <div class="span9">
-   		   <p><a href="https://v.douyu.com/show/jNBdvn8y8DmME2yw">[Mar 2024] Kangdi Liu's talk on Experimental Procedures for Tone Patterns at the MSL Software Training Course.</a></p>
+   		   <p><a href="https://v.douyu.com/show/jNBdvn8y8DmME2yw" target="_blank">[Mar 2024] Kangdi Liu's talk on Experimental Procedures for Tone Patterns at the MSL Software Training Course.</a></p>
    		   <i>Elinguistics</i>
     		 </div>
 		 </div>
@@ -182,7 +182,7 @@
    		   <img src="files/Media 3.png" alt="media_workshop.png" />
  		   </div>
  		   <div class="span9">
-  		    <p><a href="https://www.youtube.com/watch?v=9TTqab5WpmY">[Dec 2022] Quentin Qin's talk on the Better Sleep, Smarter Brain Workshop.</a></p>
+  		    <p><a href="https://www.youtube.com/watch?v=9TTqab5WpmY" target="_blank">[Dec 2022] Quentin Qin's talk on the Better Sleep, Smarter Brain Workshop.</a></p>
   		    <i>Faculty of Arts and Social Sciences, HKBU​</i>
  		   </div>
 		 </div>
@@ -193,8 +193,8 @@
    		   <img src="files/Media 4.jpg" alt="media_201901_wwp.jpg" />
  		   </div>
   		  <div class="span9">
-   		   <p><a href="https://cuhk.zoom.us/rec/play/xt5xe7tbxCUZzUi75yzqdQso9agh1Z3IzCMHmwqVccknXaji4wDPkr2M8MaqvL4kBFeEustKoHOysukU.JFs_Biax23-7gGvY?canPlayFromShare=true&from=share_recording_detail&continueMode=true&componentName=rec-play&originRequestUrl=https://cuhk.zoom.us/rec/share/uie6nauk4slNQLRQHTWCIHeeXGwlu0ayhmiDeDKF_3NQQjKwsIx_uqt8F-Sxq54_.V_Uf6MXSenxL7rP8">[Oct 2022] Quentin Qin's talk on how does training variability influence learning and consolidation of lexical tones?</a> (password:9FA^SD5V)</p>
-    		  <i><a href="https://cuhklpl.github.io/forum.html">Virtual Psycholinguistics Forum</a></i>
+   		   <p><a href="https://cuhk.zoom.us/rec/play/xt5xe7tbxCUZzUi75yzqdQso9agh1Z3IzCMHmwqVccknXaji4wDPkr2M8MaqvL4kBFeEustKoHOysukU.JFs_Biax23-7gGvY?canPlayFromShare=true&from=share_recording_detail&continueMode=true&componentName=rec-play&originRequestUrl=https://cuhk.zoom.us/rec/share/uie6nauk4slNQLRQHTWCIHeeXGwlu0ayhmiDeDKF_3NQQjKwsIx_uqt8F-Sxq54_.V_Uf6MXSenxL7rP8" target="_blank">[Oct 2022] Quentin Qin's talk on how does training variability influence learning and consolidation of lexical tones?</a> (password:9FA^SD5V)</p>
+    		  <i><a href="https://cuhklpl.github.io/forum.html" target="_blank">Virtual Psycholinguistics Forum</a></i>
    		 </div>
 		 </div>
 		 <hr>
@@ -204,7 +204,7 @@
    		   <img src="files/Media 6.png" alt="media_201710_milestone.png" />
  		   </div>
   		  <div class="span9">
-   		   <p><a href="https://huma.hkust.edu.hk/news/professor-quentin-qins-article-was-nominated-and-recognized-editorial-board-journal-phonetics">[Aug 2021] Quentin Qin’s article was nominated and recognized by the Editorial Board of the Journal of Phonetics.</a></p>
+   		   <p><a href="https://huma.hkust.edu.hk/news/professor-quentin-qins-article-was-nominated-and-recognized-editorial-board-journal-phonetics" target="_blank">[Aug 2021] Quentin Qin’s article was nominated and recognized by the Editorial Board of the Journal of Phonetics.</a></p>
     		  <i>Division of Humanities, HKUST</i>
    		 </div>
 		 </div>
