--- a/people.html
+++ b/people.html
@@ -191,7 +191,7 @@
                   <img src="thumbs/Photo_Quentin.jpeg" alt="Quentin Zhen QIN" style="margin-top: 0;"/>
                </div>
                <div class="span9 offset style="margin-top: 0;">
-                  <h4 style="font-size: 20px; text-align: left; margin-top: 0;">Quentin Zhen QIN 秦震 Ph.D.</h4>
+                  <h4 style="text-align: left; margin-top: 0;">Quentin Zhen QIN 秦震 Ph.D.</h4>
 		  <p style="font-size: 20px; margin-bottom: 5px;"><b>Principal Investigator</b></p>
                   <p style="font-size: 20px; margin-top: 5px; margin-bottom: 5px;">hmzqin@ust.hk; <a href="files/C.V._Zhen Qin_Research.pdf">CV</a></p>
                   <p style="font-size: 20px; margin-top: 5px; margin-bottom: 5px;"><a href="https://sites.google.com/site/qinzhenquentin/">Personal Website</a></p>
