--- a/facilities.html
+++ b/facilities.html
@@ -140,20 +140,23 @@
                     <div style="flex: 1;padding: 0 15px 0 0;">
                         <img src="files/facilities_F1.png" class="img-1" alt="Facility 1">
                         <div class="text-1">
-                           <p style="text-align: left;margin-top: 5px;">Main testing station</p>
+                           <p style="text-align: left;margin-top: 5px;">
+				   <span style="font-size: larger;">Main testing station</span></p>
                         </div>
                     </div>
                     <div style="flex: 1;padding: 0 15px 0 0;">
                         <img src="files/facilities_F2.jpg" class="img-2" alt="Facility 2">
 		        <div class="text-2">
-                           <p style="margin-top: 5px;">EEG Station
+                           <p style="margin-top: 5px;">
+				   <span style="font-size: larger;">EEG Station</span>
 				<br>▪ Neuroscan EEG system (64CH)</p>
                         </div>
                     </div>
 		    <div style="flex: 1;">
                         <img src="files/facilities_F3.jpg" class="img-3" alt="Facility 3">
 		        <div class="text-3">
-                           <p style="margin-top: 5px;">Eye-tracking room
+                           <p style="margin-top: 5px;">
+				   <span style="font-size: larger;">Eye-tracking room</span>
 				<br>▪ Eyelink Portable Duo (Rm 3302)</p>
                         </div>
                     </div>
