--- a/people.html
+++ b/people.html
@@ -321,7 +321,11 @@
 </section>
 
 
-
+<footer id="footer">
+ <div class="container-fluid">
+    <p>&copy; 2024 SLaB Lab. All rights reserved.</p>
+ </div>
+</footer>
 
 
 
