--- a/publications.html
+++ b/publications.html
@@ -163,6 +163,12 @@
          </div>
       </div>
 
+<footer id="footer">
+ <div class="container-fluid">
+    <p>&copy; 2024 SLaB Lab. All rights reserved.</p>
+ </div>
+</footer>
+
       
       <!-- Le javascript
          ================================================== -->
