--- a/facilities.html
+++ b/facilities.html
@@ -232,7 +232,11 @@
 	       
 </html>             
 		       
-
+<footer id="footer">
+ <div class="container-fluid">
+    <p>&copy; 2024 SLaB Lab. All rights reserved.</p>
+ </div>
+</footer>
 
       <!-- Le javascript
          ================================================== -->
