--- a/facilities.html
+++ b/facilities.html
@@ -14,6 +14,12 @@
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
       <style>
+         a {
+             color: #2E2A8C;
+         }
+         a:hover {
+             color: #1F1A6C; /* Optional: Set a different color when hovering */
+         }
          ol {
             display: block;
             list-style-type: disc;
