--- a/facilities.html
+++ b/facilities.html
@@ -15,10 +15,10 @@
       <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
       <style>
          a {
-             color: #2E2A8C;
+             color: #5048D3;
          }
          a:hover {
-             color: #1F1A6C; /* Optional: Set a different color when hovering */
+             color: #5048D3; /* Optional: Set a different color when hovering */
          }
          ol {
             display: block;
