--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
       <style>
+         li {
+             font-size: 18px;
+             line-height: 1.6;
+         }
          a {
              color: #5048D3;
          }
@@ -27,6 +31,7 @@
             margin-bottom: 1em;
             padding-left: 40px;
             background-color: white;
+            line-height: 1.6;
          }
          body {
             background-color: white;
