--- a/index.html
+++ b/index.html
@@ -84,6 +84,9 @@
             padding-top: 20px;
             border-top: 1px solid #ccc;
          }
+         .nav li a {
+            font-size: 16px;
+         }
       </style>
    </head>
    <body>
@@ -98,8 +101,8 @@
                 <div class="navbar-inner">
                     <div class="container">
                         <ul class="nav">
-                            <li class="active"><a href="#">{font-size: 16px;}Home</a></li>
-                            <li><a href="people.html">{font-size: 16px;}Members</a></li>
+                            <li class="active"><a href="#">Home</a></li>
+                            <li><a href="people.html">Members</a></li>
                             <li><a href="publications.html">Publications</a></li>
                             <li><a href="facilities.html">Facilities</a></li>
                             <li><a href="media.html">Collaboration & Outreach</a></li>
