--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
       <style>
          li {
-             font-size: 18px;
+             font-size: 16px;
              line-height: 1.6;
          }
          a {
@@ -84,9 +84,7 @@
             padding-top: 20px;
             border-top: 1px solid #ccc;
          }
-         .nav li a {
-            font-size: 16px;
-         }
+         
       </style>
    </head>
    <body>
@@ -101,6 +99,7 @@
                 <div class="navbar-inner">
                     <div class="container">
                         <ul class="nav">
+                            style="font-size:16px;"
                             <li class="active"><a href="#">Home</a></li>
                             <li><a href="people.html">Members</a></li>
                             <li><a href="publications.html">Publications</a></li>
