--- a/index.html
+++ b/index.html
@@ -98,8 +98,7 @@
             <div class="navbar">
                 <div class="navbar-inner">
                     <div class="container">
-                        <ul class="nav">
-                            style="font-size:16px;"
+                        <ul class="nav" style="font-size:16px;">
                             <li class="active"><a href="#">Home</a></li>
                             <li><a href="people.html">Members</a></li>
                             <li><a href="publications.html">Publications</a></li>
