--- a/index.html
+++ b/index.html
@@ -94,11 +94,11 @@
       <div class="container">
          
         
-         <div class="masthead">
+         <div class="masthead" style="font-size:16px;">
             <div class="navbar">
                 <div class="navbar-inner">
                     <div class="container">
-                        <ul class="nav" style="font-size:16px;">
+                        <ul class="nav">
                             <li class="active"><a href="#">Home</a></li>
                             <li><a href="people.html">Members</a></li>
                             <li><a href="publications.html">Publications</a></li>
