--- a/index.html
+++ b/index.html
@@ -152,7 +152,8 @@
 </html>
 <hr>
              <div class="span10 section">
-                  <h4>News and Events</h4>
+                  <h4>News and Events
+                  </h4>
                   <div style="max-height: 200px; overflow-y: auto; border: 0.8px solid #ccc; padding: 10px;">
                       <ol>
                           <li>21/10/2024 Our team member Kangdi LIU received the 2024/2025 Dr. Charles Chan Postgraduate Scholarship. Congrats!</li>	
@@ -188,7 +189,8 @@
                </div>
 
             <div class="span10 section">
-                <h4>We are interested in...</h4>
+                <h4>We are interested in...
+                </h4>
                 
                   <!-- Add this CSS to the <style> section of your HTML file -->
                   <style>
