--- a/people.html
+++ b/people.html
@@ -43,6 +43,12 @@
             align-items: center;
             gap: 0; /* Remove gap between images */
          }
+	 h3 {
+            font-size: 36px;
+            margin-top: 40px; /* Increase spacing above section headings */
+            margin-bottom: 20px; /* Increase spacing below section headings */
+            text-align: center; /* Center the heading */
+         }
          h4 {
             font-size: 24px;
             margin-top: 40px; /* Increase spacing above section headings */
@@ -109,7 +115,7 @@
 
 <!-- 外部容器，确保页面内容不会超过指定宽度 -->
 <div class="container" style="width: 60%; height: 60%; margin: 0 auto;">
-
+<h3>Current Team Members</h3>
    <!-- 轮播图 -->
    <div class="row-fluid">
       <div class="span10">
@@ -279,7 +285,7 @@
 
 <section id="alumni">
    <div class="row-fluid" style="text-align: center;">
-      <h4>Past Members and Alumni</h4>
+      <h3>Past Members and Alumni</h3>
    </div>
    <div class="row-fluid" style="padding-top: 40px;">
       <div class="span3">
