--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
       <div class="container">
          
         
-         <div class="masthead" style="font-size:14px;">
+         <div class="masthead" style="font-size:14px !important;">
             <div class="navbar">
                 <div class="navbar-inner">
                     <div class="container">
