--- a/index.html
+++ b/index.html
@@ -189,9 +189,8 @@
                </div>
 
             <div class="span10 section">
-                <h4>We are interested in...
-                </h4>
-                
+                <h4>We are interested in...</h4>
+                <br>
                   <!-- Add this CSS to the <style> section of your HTML file -->
                   <style>
                       .responsive-img {
@@ -316,6 +315,7 @@
                   <div class="content-with-image">
                       <div class="text-content">
                            <h4>Contact us!</h4>
+                           <br>
                               <p>
                                  ​Email: <a href="mailto:qinlabhkust@gmail.com">qinlabhkust@gmail.com</a><br>
                                  Location: Room G005,</a><br>
