--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
                <div class="img-container">
                  <div style="display: flex; justify-content: space-between;">
                     <div style="flex: 1;">
+                       <h4>Welcome to</h4>
                         <img src="files/welcometoslab.png" class="small-img" alt="Slab Letter">
                         <div class="text">
                            <p>We are based in the <a href="https://huma.hkust.edu.hk/" target="_blank">Division of Humanities</a> at Hong Kong University of Science and Technology.
