--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@
                 <div class="navbar-inner">
                     <div class="container">
                         <ul class="nav">
-                            <li class="active"><a href="#">Home</a></li>
-                            <li><a href="people.html">Members</a></li>
-                            <li><a href="publications.html">Publications</a></li>
-                            <li><a href="facilities.html">Facilities</a></li>
-                            <li><a href="media.html">Collaboration & Outreach</a></li>
+                            <p class="active"><a href="#">Home</a></p>
+                            <p><a href="people.html">Members</a></p>
+                            <p><a href="publications.html">Publications</a></p>
+                            <p><a href="facilities.html">Facilities</a></p>
+                            <p><a href="media.html">Collaboration & Outreach</a></p>
                         </ul>
                     </div>
                 </div>
