--- a/index.html
+++ b/index.html
@@ -99,11 +99,11 @@
                 <div class="navbar-inner">
                     <div class="container">
                         <ul class="nav">
-                            <p class="active"><a href="#">Home</a></p>
-                            <p><a href="people.html">Members</a></p>
-                            <p><a href="publications.html">Publications</a></p>
-                            <p><a href="facilities.html">Facilities</a></p>
-                            <p><a href="media.html">Collaboration & Outreach</a></p>
+                            <li class="active"><a href="#">Home</a></li>
+                            <li><a href="people.html">Members</a></li>
+                            <li><a href="publications.html">Publications</a></li>
+                            <li><a href="facilities.html">Facilities</a></li>
+                            <li><a href="media.html">Collaboration & Outreach</a></li>
                         </ul>
                     </div>
                 </div>
@@ -157,7 +157,7 @@
                   <br>
                   <div style="max-height: 200px; overflow-y: auto; border: 0.8px solid #ccc; padding: 10px;">
                       <ol>
-                          <li>21/10/2024 Our team member Kangdi LIU received the 2024/2025 Dr. Charles Chan Postgraduate Scholarship. Congrats!</li>	
+                          <p>▪ 21/10/2024 Our team member Kangdi LIU received the 2024/2025 Dr. Charles Chan Postgraduate Scholarship. Congrats!</p>	
                           <li>08/10/2024 Our preprint paper, “<a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4978553" target="_blank"> The Role of Prior Knowledge in Second-Language Learners’ Overnight Consolidation of Cantonese Tones</a>”, has been published on SSRN. Congrats!</li>	
                           <li>26/08/2024 Jeremy(Poster No. 30) and Yuqi(Poster No. 36) gave poster presentations at <a href="https://cogsci2024.hkust.edu.hk/" target="_blank"> CogSci 2024 Hong Kong Meetup</a>.</li>	
                           <li>05/08/2024 Jiayu LIANG, who graduated from Shandong University, joined our lab as RA!</li>				
