--- a/people.html
+++ b/people.html
@@ -113,7 +113,9 @@
 
 <!-- 外部容器，确保页面内容不会超过指定宽度 -->
 <div class="container" style="width: 60%; height: 60%; margin: 0 auto;">
+<div class="span10">
 <h3>Current Team Members</h3>
+</div>
    <!-- 轮播图 -->
    <div class="row-fluid">
       <div class="span10">
