--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
       </body>
 </html>
 <hr>
-             <div class="span12 section">
+             <div class="section">
                   <h4>News and Events</h4>
                   <br>
                   <div style="max-height: 200px; overflow-y: auto; border: 0.8px solid #ccc; padding: 10px;">
@@ -189,7 +189,7 @@
                   </div>
                </div>
 
-            <div class="span10 section">
+            <div class="section">
                 <h4>We are interested in...</h4>
                 <br>
                   <!-- Add this CSS to the <style> section of your HTML file -->
@@ -282,7 +282,7 @@
                       </div>
                   </div>
             <hr>
-               <div class="span10 section">
+               <div class="section">
                   <style>
                       .responsive-img {
                           width: auto;
