--- a/index.html
+++ b/index.html
@@ -54,6 +54,12 @@
             margin-bottom: 20px; /* Increase spacing below section headings */
             text-align: center; /* Center the heading */
          }
+         h3 {
+            font-size: 24px;
+            margin-top: 40px; /* Increase spacing above section headings */
+            margin-bottom: 20px; /* Increase spacing below section headings */
+            text-align: left;
+         }
          .contact-section h4 {
             text-align: left; /* Align the "Contact us!" heading to the left */
          }
@@ -233,7 +239,7 @@
                   <!-- First Content Block -->
                   <div class="content-with-image">
                       <div class="text-content">
-                          <p><b>Second-language learning of speech prosody</b></p>
+                          <h3>Second-language learning of speech prosody</h3>
                           <p>
                               It is well established that the first language (L1) is claimed to be responsible for second-language learners’ (in)ability to process sounds in a new language. However, the conditions under which the L1 facilitates or inhibits the learning of new sounds have yet to be understood. Adopting phonetic and psycholinguistic approaches, our research focuses on how lexical tones (Mandarin tones: /pā/ ‘eight’ T1, /pá/ ‘to pull out’ T2, /pǎ/ ‘to hold’ T3, /pà/ ‘father’ T4) and lexical stress (English stress: DEsert vs. deSERT) are processed by adult second-language learners who speak different languages as L1.
                           </p>
@@ -250,7 +256,7 @@
                   <!-- Second Content Block -->
                   <div class="content-with-image">
                       <div class="text-content">
-                          <p><b>Sleep-dependent consolidation of lexical tones</b></p>
+                          <h3>Sleep-dependent consolidation of lexical tones</h3>
                           <p>
                               Recent evidence shows that sleep plays a crucial role in transforming newly acquired linguistic knowledge into long-term memory. Given unique characteristics of lexical tones (e.g., high talker-variability of pitch), there is still a vast unexplored area in sleep-mediated memory consolidation of tone learning. By combining behavioral experiments and brain imaging technologies (e.g., EEG), we are dedicated to exploring the relationship between sleep and tone learning, providing memory-based insights for cross-language and cross-age learning of lexical tones.
                           </p>
@@ -267,7 +273,7 @@
                   <!-- Third Content Block -->
                   <div class="content-with-image">
                       <div class="text-content">
-                          <p><b>Aging, cognitive, and language learning</b></p>
+                          <h3>Aging, cognitive, and language learning</h3>
                           <p>
                               Our research is concerned with the well-being of the aging population. Older adults are facing the challenges of age-related dysfunction in language learning and cognition (e.g., memory and attention). Indeed, recent projects have aimed at investigating older adults’ decline in lexical tone learning and the possible relationship with cognitive ability. We also attempt to find evidence that multilingual language experiences (including learning a new language) can mitigate cognitive decline and promote healthy aging.
                           </p>
