--- a/people.html
+++ b/people.html
@@ -59,7 +59,7 @@
             text-align: left; /* Align the "Contact us!" heading to the left */
          }
          p {
-            font-size: 16px;
+            font-size: 18px;
             margin-bottom: 20px; /* Add spacing below paragraphs */
             line-height: 1.6; /* Adjust line spacing within paragraphs */
          }
@@ -298,7 +298,7 @@
 	
 <section id="alumni">
    <div class="row-fluid" style="text-align: center;">
-      <h3>Past Members and Alumni</h3>
+      <h4>Past Members and Alumni</h4>
    </div>
    <div class="row-fluid" style="padding-top: 40px;">
       <div class="span3">
@@ -337,7 +337,7 @@
 	
 <section id="Opportunity">
    <div class="row-fluid" style="text-align: center;">
-      <h4 style="font-size: 28px; margin-top: 60px; margin-bottom: 40px;">Opportunity</h4> <!-- Center the header -->
+      <h4 style="margin-top: 60px; margin-bottom: 40px;">Opportunity</h4> <!-- Center the header -->
    </div>
    <div class="row-fluid" style="display: flex; justify-content: center;">
       <div class="span9 offset1" style="text-align: left; width: auto; margin: 0 auto;"> <!-- Left-align content with max-width and centered container -->
