--- a/publications.html
+++ b/publications.html
@@ -50,7 +50,7 @@
 	 h3 {
             font-size: 36px;
             margin-top: 40px; /* Increase spacing above section headings */
-            margin-bottom: 40px; /* Increase spacing below section headings */
+            margin-bottom: 20px; /* Increase spacing below section headings */
             text-align: center; /* Center the heading */
          }
          h4 {
@@ -116,7 +116,9 @@
                
 
 <section>
-  <h3>Publications</h3>
+  <div class="page-header">
+    <h3>Publications</h3>
+  </div>
   <div class="page-header">
     <h4>Journal Articles</h4>
   </div>
@@ -143,6 +145,7 @@
     <li class="publication">Chui, Y., & Qin, Z. (2023). Distributional learning and overnight consolidation of a difficult non-native tone contrast. In <em>Proceedings of the 20th International Congress of Phonetic Sciences (ICPhS 2023)</em>, 2557-2561. Prague, Czech. [<a href="https://drive.google.com/file/d/1c6VdXpZ9zN8cwSqaeLmRFZy_H-HI7yE6/view" target="_blank">PDF</a>, open access]</li>
     <li class="publication">Qin, Z., Jin, R., & Wu, R. (2023). The role of prior knowledge in second-language learners' overnight consolidation of Cantonese tones. In <em>Proceedings of the 20th International Congress of Phonetic Sciences (ICPhS 2023)</em>, 1881-1885. Prague, Czech. [<a href="https://drive.google.com/file/d/1eV6psrNlU3LY3W0fzjBGW1JKZ6Wuea2s/view" target="_blank">PDF</a>, open access]</li>
   </ol>
+  <hr>
 </section>
 
 <section id="book">
