--- a/media.html
+++ b/media.html
@@ -14,6 +14,10 @@
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
       <style>
+         li {
+             font-size: 16px;
+             line-height: 1.6;
+         }
          a {
              color: #5048D3;
          }
