--- a/people.html
+++ b/people.html
@@ -255,7 +255,7 @@
          <img src="thumbs/Photo_Jeremy.jpg" alt="Jeremy, Yin To CHUI" style="margin-top: 0;"/>
       </div>
       <div class="span9 offset" style="margin-top: 0;">
-         <h4 style="text-align: left; margin-top: 0;" >Jeremy, Yin To CHUI 徐彥韜 (BA: CUHK; MA: PolyU; MPhil: UST)</h4>
+         <h4 style="font-size: 23px; text-align: left; margin-top: 0;" >Jeremy, Yin To CHUI 徐彥韜 (BA: CUHK; MA: PolyU; MPhil: UST)</h4>
 	 <p style="font-size: 18px; margin-bottom: 5px;"><b>Ph.D Student (HKPFS awardee)</b></p>
 	 <p style="font-size: 18px; margin-top: 5px; margin-bottom: 5px;">ytchuiac@connect.ust.hk; <a href="https://www.researchgate.net/profile/Yin-To-Chui">ResearchGate</a>, <a href="files/CV_Jeremy.pdf">CV</a></p>
 	 <p style="font-size: 18px; margin-top: 5px;">ORCID ID: <a href="https://orcid.org/0000-0002-2169-086X">https://orcid.org/0000-0002-2169-086X</a></p>
