--- a/people.html
+++ b/people.html
@@ -183,6 +183,13 @@
                      <h4>2024 Yuqi's MPhil thesis defense</h4>
                   </div>
                </div>
+		    
+               <div class="item">
+                  <img src="files/SNL 2024 in Brisbane.jpg" class="carousel-image" alt="">
+                  <div class="carousel-caption">
+                     <h4>SNL 2024 in Brisbane</h4>
+                  </div>
+               </div>
                <!-- 其他项目继续... -->
 
             </div>
