--- a/media.html
+++ b/media.html
@@ -125,7 +125,7 @@
 		   <h3>Collaborators</h3>
 		   <p><em>On Second-language learning of speech prosody</em></p>
 			  <ol> 
-			    <li>Dr. Sang-Im Lee-Kim, Hanyang University, Korea [<a href="https://sites.google.com/site/sangimleekim/" target="_blank">Link</a>]</li>
+			    <li class="publication">Dr. Sang-Im Lee-Kim, Hanyang University, Korea [<a href="https://sites.google.com/site/sangimleekim/" target="_blank">Link</a>]</li>
 			    <li>Prof. Annie Tremblay, University of Texas at El Paso, U.S. [<a href="https://www.annietremblay.com/" target="_blank">Link</a>]</li>
 			    <li>Dr. Jingwei Zhang, University of Macau [<a href="https://fah.um.edu.mo/jingwei-zhang/" target="_blank">Link</a>]</li>
 			  </ol>
